// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AKineticsComponent colors renders a default a-kinetics-component 1`] = `
<span
  className="slds-a-kinetics-component"
>
  Lovely a-kinetics-component
</span>
`;

exports[`AKineticsComponent colors renders an inverse a-kinetics-component 1`] = `
<span
  className="slds-a-kinetics-component slds-a-kinetics-component_inverse"
>
  Lovely a-kinetics-component
</span>
`;

exports[`AKineticsComponent colors renders a-kinetics-component 1`] = `
<span
  className="slds-a-kinetics-component slds-a-kinetics-component_lightest"
>
  Light
</span>
`;

exports[`AKineticsComponent with icons renders a-kinetics-component with icon only 1`] = `
<span
  className="slds-a-kinetics-component slds-a-kinetics-component_lightest"
>
  <span
    className="slds-a-kinetics-component__icon slds-a-kinetics-component__icon_left"
  >
    <span
      className="slds-icon_container slds-icon-utility-world slds-current-color"
      title="Description of icon when needed"
    >
      <svg
        aria-hidden={true}
        className="slds-icon slds-icon_xx-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        assistive text goes here, do it!
      </span>
    </span>
  </span>
</span>
`;

exports[`AKineticsComponent with icons renders a-kinetics-component with left icon 1`] = `
<span
  className="slds-a-kinetics-component slds-a-kinetics-component_lightest"
>
  <span
    className="slds-a-kinetics-component__icon slds-a-kinetics-component__icon_left"
  >
    <span
      className="slds-icon_container slds-icon-utility-world slds-current-color"
      title="Description of icon when needed"
    >
      <svg
        aria-hidden={true}
        className="slds-icon slds-icon_xx-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
        />
      </svg>
    </span>
  </span>
  Icon on the left
</span>
`;

exports[`AKineticsComponent with icons renders a-kinetics-component with right icon 1`] = `
<span
  className="slds-a-kinetics-component slds-a-kinetics-component_lightest"
>
  Icon on the right
  <span
    className="slds-a-kinetics-component__icon slds-a-kinetics-component__icon_left"
  >
    <span
      className="slds-icon_container slds-icon-utility-world slds-current-color"
      title="Description of icon when needed"
    >
      <svg
        aria-hidden={true}
        className="slds-icon slds-icon_xx-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`AKineticsComponent with icons renders deprecated a-kinetics-component with icon only 1`] = `
<span
  className="slds-a-kinetics-component slds-a-kinetics-component_lightest"
>
  <span
    className="slds-icon_container slds-icon-utility-world"
    title="Description of icon when needed"
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-icon_xx-small slds-icon-text-default"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      assistive text goes here, do it!
    </span>
  </span>
</span>
`;

exports[`AKineticsComponent with icons renders deprecated a-kinetics-component with right icon 1`] = `
<span
  className="slds-a-kinetics-component slds-a-kinetics-component_lightest"
>
  Icon on the right
  <span
    className="slds-icon_container slds-icon-utility-world slds-m-left_xx-small"
    title="Description of icon when needed"
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-icon_xx-small slds-icon-text-default"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#world"
      />
    </svg>
  </span>
</span>
`;
